# wurfelland

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  EXPLANATION.md  PIPELINE_OVERVIEW.md  README.md  generate_assets.py  generate_skin.py  map_ generation.pptx
assets/: credits.txt
assets/entities/: cat.json  chicken.json  cow.json  penguin.json  pig.json  skeleton.json
assets/models/: stone_axe.geo.json  torch.geo.json
assets/models/cat/: cat.geo.json
assets/models/chicken/: chicken.geo.json
assets/models/cow/: cow.geo.json
assets/models/furnace/: furnace.geo.json
assets/models/penguin/source/: model.gltf
assets/models/pig/: pig.geo.json
assets/models/skeleton/: skeleton.geo.json
assets/models/stone_axe/: stone_axe.geo.json
assets/models/sword/: sword.geo.json
assets/models/torch/: torch.geo.json
assets/models/workbench/: workbench.geo.json
saves/: 1.json  2.json  3.json  4.json  5.json
src/: block_atlas_data.rs  camera_old2.rs  main.cpp  main.rs  save.rs  voxel.hpp
src/audio/: mod.rs
src/camera/: camera.rs  frustum.rs  mod.rs
src/game/: block.rs  camera_old.rs  mod.rs  player.rs
src/net/: client.rs  messages.rs  mod.rs  server.rs
src/renderer/: bag_renderer.rs  block_outline_renderer.rs  block_renderer(OBSOLETE).rs  build_menu_renderer.rs  chunk_mesh.rs  chunk_outline_renderer.rs  chunk_renderer.rs  clock_renderer.rs  console_renderer.rs  crack_renderer.rs  credits_menu_renderer.rs  crosshair_renderer.rs  entity_renderer.rs  geo_atlas.rs  geo_model.rs  gltf_model.rs  healthbar_renderer.rs  hotbar_renderer.rs  item_renderer.rs  load_menu_renderer.rs  main_menu_renderer.rs  menu_renderer.rs  mesh_renderer.rs  minimap_renderer.rs  mod.rs  multiplayer_menu_renderer.rs  options_menu_renderer.rs  placed_object_renderer.rs  player_renderer.rs  shadow_pass.rs  sky_renderer.rs  stats_renderer.rs  sun_renderer.rs  ui.rs  underwater_renderer.rs  utils.rs
src/world/: biome.rs  block.rs  chunk.rs  entity.rs  entity_def.rs  face.rs  item.rs  mod.rs  tree.rs  world.rs
